--- a/fesapade/src/app/components/detallecurso/detallecurso.component.html
+++ b/fesapade/src/app/components/detallecurso/detallecurso.component.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="icon" href="../../../assets/fesapadelogo.ico">
 
 <body>
 
@@ -46,12 +47,13 @@
             </nav>
         </div>
     </header>
-    <div *ngFor="let deta of detalle" >
+    <div *ngFor="let deta of detalle">
         <section>
             <div class="caja">
                 <div class="glass">
                     <div class="box">
-                        <img src="http://localhost/recursos/imagenes/portadas_cursos/{{deta.portada}}" alt="Cargando imagen...">
+                        <img src="http://localhost/recursos/imagenes/portadas_cursos/{{deta.portada}}"
+                            alt="Cargando imagen...">
                     </div>
 
 
@@ -81,14 +83,18 @@
                     <div class="card mr-1">
                         <div class="contenedor2">
                             <figure>
-                                <img class="card-img-top" src="http://localhost/recursos/imagenes/imagenes_cursos/{{deta.imagen1}}" alt="Card image cap">
+                                <img class="card-img-top"
+                                    src="http://localhost/recursos/imagenes/imagenes_cursos/{{deta.imagen1}}"
+                                    alt="Card image cap">
                             </figure>
                         </div>
                     </div>
                     <div class="card">
                         <div class="contenedor2">
                             <figure>
-                                <img class="card-img-top" src="http://localhost/recursos/imagenes/imagenes_cursos/{{deta.imagen2}}" alt="Card image cap">
+                                <img class="card-img-top"
+                                    src="http://localhost/recursos/imagenes/imagenes_cursos/{{deta.imagen2}}"
+                                    alt="Card image cap">
                             </figure>
                         </div>
                     </div>
@@ -97,7 +103,9 @@
                 <div class="card">
                     <div class="contenedor2">
                         <figure>
-                            <img class="card-img-top" src="http://localhost/recursos/imagenes/imagenes_cursos/{{deta.imagen3}}" alt="Card image cap">
+                            <img class="card-img-top"
+                                src="http://localhost/recursos/imagenes/imagenes_cursos/{{deta.imagen3}}"
+                                alt="Card image cap">
                         </figure>
                     </div>
                 </div>
@@ -112,10 +120,18 @@
         <div class="container-fluid p-0">
             <div class="row text-left">
                 <div class="col-md-5 col-md-5">
-                    <h1 class="text-light">About Us</h1>
-                    <p class="text-muted">La Federación Salvadoreña de Paracaidismo y Aerodeportes (FESAPADE) es una
-                        Federación
-                        Deportivo Nacional que engloba todos los Deportes Aéreos en el país.</p>
+                    <h1 class="text-light">Contáctanos</h1>
+                    <p class="text-muted">Dirección​​​​​​:
+                        Aeropuerto Internacional de Ilopango, San Salvador. El Salvador. C.A.</p>
+                    <p class="text-muted">Correo electrónico:
+                        svfesapade@gmail.com</p>
+                    <p class="text-muted">Números de teléfono: <br>
+                        (503) 7736-6598
+                        <br>
+                        (503) 7304-8551
+                        <br>
+                        (503) 7840-0667
+                    </p>
                     <p class="pt-4 text-muted">Copyright ©2021 All rights reserved|Developed By <span>R.Coto and
                             A.Vladimir</span>
                     </p>
