--- a/fesapade/src/app/components/galeria/galeria.component.html
+++ b/fesapade/src/app/components/galeria/galeria.component.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-
+<link rel="icon" href="../../../assets/fesapadelogo.ico">
 
 <header>
     <div class="container-fluid p-0">
@@ -66,16 +66,13 @@
                     <img src="../../../assets/gal06.jpg" height="300px">
                     <img src="../../../assets/gal07.jpg">
                     <img src="../../../assets/gal08.jpg">
-                    <img
-                        src="../../../assets/gal15.jpg">
-                        <img
-                        src="../../../assets/gal14.jpg">
+                    <img src="../../../assets/gal15.jpg">
+                    <img src="../../../assets/gal14.jpg">
                 </div>
                 <div class="column">
                     <img src="../../../assets/gal09.jpg" />
                     <img src="../../../assets/gal10.jpg" />
-                    <img
-                        src="../../../assets/gal16.jpg">
+                    <img src="../../../assets/gal16.jpg">
                     <img src="../../../assets/gal11.jpg">
                     <img src="../../../assets/gal12.jpg">
                 </div>
@@ -88,35 +85,46 @@
     <!--end section 1-->
     <footer>
         <div class="container-fluid p-0">
-          <div class="row text-left">
-            <div class="col-md-5 col-md-5">
-              <h1 class="text-light">About Us</h1>
-              <p class="text-muted">La Federación Salvadoreña de Paracaidismo y Aerodeportes (FESAPADE) es una Federación
-                Deportivo Nacional que engloba todos los Deportes Aéreos en el país.</p>
-              <p class="pt-4 text-muted">Copyright ©2021 All rights reserved|Developed By <span>R.Coto and A.Vladimir</span>
-              </p>
+            <div class="row text-left">
+                <div class="col-md-5 col-md-5">
+                    <h1 class="text-light">Contáctanos</h1>
+                    <p class="text-muted">Dirección​​​​​​:
+                        Aeropuerto Internacional de Ilopango, San Salvador. El Salvador. C.A.</p>
+                    <p class="text-muted">Correo electrónico:
+                        svfesapade@gmail.com</p>
+                    <p class="text-muted">Números de teléfono: <br>
+                        (503) 7736-6598
+                        <br>
+                        (503) 7304-8551
+                        <br>
+                        (503) 7840-0667
+                    </p>
+                    <p class="pt-4 text-muted">Copyright ©2021 All rights reserved|Developed By <span>R.Coto and
+                            A.Vladimir</span>
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <h4 class="text-light">Nuestros Cursos</h4>
+                    <li class="text-muted">Paracaidismo básico.</li>
+                    <li class="text-muted">Empaque.</li>
+                    <li class="text-muted">Salto con línea.</li>
+                    <li class="text-muted">Entrenamiento físico y teórico.</li>
+                </div>
+                <div class="col-md-2 col-sm-12">
+                    <h4 class="text-light">Síguenos</h4>
+                    <p class="text-muted">Seamos sociables</p>
+                    <div class="column">
+                        <a href="https://es-la.facebook.com/FESAPADE/"><i class="fa fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/fesapade/"><i class="fa fa-instagram"></i></a>
+                        <a href="https://twitter.com/FESAPADE"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.youtube.com/channel/UCKwNhAzIUdsQsTo7Uf4R_DQ/featured"><i
+                                class="fa fa-youtube-play"></i></a>
+                    </div>
+                </div>
+
+
             </div>
-            <div class="col-md-5">
-              <h4 class="text-light">Nuestros Cursos</h4>
-              <li class="text-muted">Paracaidismo básico.</li>
-              <li class="text-muted">Empaque.</li>
-              <li class="text-muted">Salto con línea.</li>
-              <li class="text-muted">Entrenamiento físico y teórico.</li>
-            </div>
-            <div class="col-md-2 col-sm-12">
-              <h4 class="text-light">Síguenos</h4>
-              <p class="text-muted">Seamos sociables</p>
-              <div class="column">
-                <a href="https://es-la.facebook.com/FESAPADE/"><i class="fa fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/fesapade/"><i class="fa fa-instagram"></i></a>
-                <a href="https://twitter.com/FESAPADE"><i class="fa fa-twitter"></i></a>
-                <a href="https://www.youtube.com/channel/UCKwNhAzIUdsQsTo7Uf4R_DQ/featured"><i class="fa fa-youtube-play"></i></a>
-              </div>
-            </div>
-    
-    
-          </div>
         </div>
-      </footer>
+    </footer>
 
 </body>
