--- a/fesapade/src/app/components/landingpage/landingpage.component.html
+++ b/fesapade/src/app/components/landingpage/landingpage.component.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+<link rel="icon" href="../../../assets/fesapadelogo.ico">
 
 <body>
 
@@ -195,7 +196,8 @@
                 <img class="img-1" src="../../../assets/foto2.jpg">
                 <div class="capa">
                   <h3>Equipo certificado</h3>
-                  <p>Contamos con instructores altamente capacitados para orientarte durante el proceso de formación.</p>
+                  <p>Contamos con instructores altamente capacitados para orientarte durante el proceso de formación.
+                  </p>
                 </div>
               </figure>
             </div>
@@ -206,7 +208,8 @@
                 <img class="img-1" src="../../../assets/adventure.jpg">
                 <div class="capa">
                   <h3>Caída libre</h3>
-                  <p>El curso mas popular entre nuestros federados, caracterizado por su gran adrenalina y la posibilidad de realizar piruetas.</p>
+                  <p>El curso mas popular entre nuestros federados, caracterizado por su gran adrenalina y la
+                    posibilidad de realizar piruetas.</p>
                 </div>
               </figure>
             </div>
@@ -258,7 +261,8 @@
                 <img class="img-3" src="../../../assets/skydive-5379579_1920.jpg">
                 <div class="capa">
                   <h3>Equipamiento</h3>
-                  <p>Contamos con un equipamiento en perfecto estado para mantener tu seguridad, porque eres lo más importante para nosotros.</p>
+                  <p>Contamos con un equipamiento en perfecto estado para mantener tu seguridad, porque eres lo más
+                    importante para nosotros.</p>
                 </div>
               </figure>
             </div>
@@ -403,9 +407,18 @@
     <div class="container-fluid p-0">
       <div class="row text-left">
         <div class="col-md-5 col-md-5">
-          <h1 class="text-light">About Us</h1>
-          <p class="text-muted">La Federación Salvadoreña de Paracaidismo y Aerodeportes (FESAPADE) es una Federación
-            Deportivo Nacional que engloba todos los Deportes Aéreos en el país.</p>
+          <h1 class="text-light">Contáctanos</h1>
+          <p class="text-muted">Dirección​​​​​​:
+            Aeropuerto Internacional de Ilopango, San Salvador. El Salvador. C.A.</p>
+          <p class="text-muted">Correo electrónico:
+            svfesapade@gmail.com</p>
+          <p class="text-muted">Números de teléfono: <br>
+            (503) 7736-6598
+            <br>
+            (503) 7304-8551
+            <br>
+            (503) 7840-0667
+          </p>
           <p class="pt-4 text-muted">Copyright ©2021 All rights reserved|Developed By <span>R.Coto and A.Vladimir</span>
           </p>
         </div>
@@ -423,7 +436,8 @@
             <a href="https://es-la.facebook.com/FESAPADE/"><i class="fa fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/fesapade/"><i class="fa fa-instagram"></i></a>
             <a href="https://twitter.com/FESAPADE"><i class="fa fa-twitter"></i></a>
-            <a href="https://www.youtube.com/channel/UCKwNhAzIUdsQsTo7Uf4R_DQ/featured"><i class="fa fa-youtube-play"></i></a>
+            <a href="https://www.youtube.com/channel/UCKwNhAzIUdsQsTo7Uf4R_DQ/featured"><i
+                class="fa fa-youtube-play"></i></a>
           </div>
         </div>
 
