--- a/fesapade/src/app/components/addnota/addnota.component.html
+++ b/fesapade/src/app/components/addnota/addnota.component.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link rel="icon" href="../../../assets/fesapadelogo.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS GRID DASHBOARD</title>
@@ -38,59 +39,62 @@
 
 
                 <!-- MAIN TITLE ENDS HERE -->
-<!-- Inicio de contenido -->
-<form #validatedForm="ngForm">
-    <div class="alingtitu">
-        
-            <div class="form-row">
-                <div class="form-group col-md-5">
-                    <label for="formGroupExampleInput">Federado seleccionado</label>
-                    <input type="text" required class="form-control" #fedC="ngModel"  [(ngModel)]="selectedFed.nombre + ' ' + selectedFed.apellido"  name="federado"
-                        id="formGroupExampleInput"  readonly>
-                        <div *ngIf="(fedC.invalid && (fedC.dirty || fedC.touched))">
-                    
-                            <p class="text-danger" *ngIf="fedC.errors.required">Campo requerido</p>                    
+                <!-- Inicio de contenido -->
+                <form #validatedForm="ngForm">
+                    <div class="alingtitu">
+
+                        <div class="form-row">
+                            <div class="form-group col-md-5">
+                                <label for="formGroupExampleInput">Federado seleccionado</label>
+                                <input type="text" required class="form-control" #fedC="ngModel"
+                                    [(ngModel)]="selectedFed.nombre + ' ' + selectedFed.apellido" name="federado"
+                                    id="formGroupExampleInput" readonly>
+                                <div *ngIf="(fedC.invalid && (fedC.dirty || fedC.touched))">
+
+                                    <p class="text-danger" *ngIf="fedC.errors.required">Campo requerido</p>
+                                </div>
+                            </div>
+
                         </div>
-                </div>
-    
-            </div>
-    
-       <div class="form-group col-md-5">
-              <label for="inputState">Evaluación</label>
-              <br>
-              <font size=1>(Evaluaciones disponibles para este curso)</font>
-              <select id="inputState" class="form-control"  autocomplete="off"  
-              [(ngModel)]="nota.id_evaluacion"   required #evaC="ngModel" name="evaluacion">
-                <option *ngFor="let eva of evaluaciones"  [value]="eva.id_evaluacion">{{eva.nombre}}</option> 
-              </select>
-              <div *ngIf="(evaC.invalid && (evaC.dirty || evaC.touched))">
-                    
-                <p class="text-danger" *ngIf="evaC.errors.required">Campo requerido</p>                    
-            </div>
-          </div>
-            <div class="form-group col-md-5">
-                <label for="formGroupExampleInput">Calificación</label>
-                <input type="number" required class="form-control" min="0.00" max="10.00" pattern="^[0-9]+(.[0-9]{1,2})?$" 
-                    id="formGroupExampleInput" autocomplete="off" [(ngModel)]="nota.nota" 
-                    name="nota" #notC="ngModel" placeholder="10.00">
-                    <div *ngIf="(notC.invalid && (notC.dirty || notC.touched))">
-                        <p class="text-danger" *ngIf="notC.errors.required">Campo requerido</p>  
-                        <p class="text-danger" *ngIf="notC.errors.min">Valor minimo: 0.00</p>
-                        <p class="text-danger" *ngIf="notC.errors.max">Valor máximo: 10.00</p>
-                        <p class="text-danger" *ngIf="notC.errors.pattern">formato incorrecto (Ej. 10.00)</p>                  
+
+                        <div class="form-group col-md-5">
+                            <label for="inputState">Evaluación</label>
+                            <br>
+                            <font size=1>(Evaluaciones disponibles para este curso)</font>
+                            <select id="inputState" class="form-control" autocomplete="off"
+                                [(ngModel)]="nota.id_evaluacion" required #evaC="ngModel" name="evaluacion">
+                                <option *ngFor="let eva of evaluaciones" [value]="eva.id_evaluacion">{{eva.nombre}}
+                                </option>
+                            </select>
+                            <div *ngIf="(evaC.invalid && (evaC.dirty || evaC.touched))">
+
+                                <p class="text-danger" *ngIf="evaC.errors.required">Campo requerido</p>
+                            </div>
+                        </div>
+                        <div class="form-group col-md-5">
+                            <label for="formGroupExampleInput">Calificación</label>
+                            <input type="number" required class="form-control" min="0.00" max="10.00"
+                                pattern="^[0-9]+(.[0-9]{1,2})?$" id="formGroupExampleInput" autocomplete="off"
+                                [(ngModel)]="nota.nota" name="nota" #notC="ngModel" placeholder="10.00">
+                            <div *ngIf="(notC.invalid && (notC.dirty || notC.touched))">
+                                <p class="text-danger" *ngIf="notC.errors.required">Campo requerido</p>
+                                <p class="text-danger" *ngIf="notC.errors.min">Valor minimo: 0.00</p>
+                                <p class="text-danger" *ngIf="notC.errors.max">Valor máximo: 10.00</p>
+                                <p class="text-danger" *ngIf="notC.errors.pattern">formato incorrecto (Ej. 10.00)</p>
+                            </div>
+                        </div>
+
+
                     </div>
-                </div>
-                
 
-  </div>
+                    <br>
+                    <div class="alingboton">
+                        <button type="submit" *ngIf="selectedFed.nombre != null" (click)="alta()"
+                            [disabled]="!validatedForm.form.valid" class="btn btn-primary btn-md">Asignar nota</button>
+                    </div>
 
-    <br>
-    <div class="alingboton">
-        <button type="submit" *ngIf="selectedFed.nombre != null"  (click)="alta()"  [disabled]="!validatedForm.form.valid" class="btn btn-primary btn-md">Asignar nota</button>
-    </div>
-   
-</form>
-<!-- Fin de contenido -->
+                </form>
+                <!-- Fin de contenido -->
             </div>
         </main>
 
@@ -111,7 +115,7 @@
                 </div>
                 <h2>Anuncios y publicaciones</h2>
                 <div class="sidebar__link ">
-                    <i class="fa fa-plus" ></i>
+                    <i class="fa fa-plus"></i>
                     <a routerLink="/add-publicacion">Agregar publicación</a>
                 </div>
                 <div class="sidebar__link">
@@ -124,13 +128,13 @@
                     <a routerLink="/add-evaluacion">Agregar evaluación</a>
                 </div>
                 <div class="sidebar__link">
-                    <i class="fa fa-wrench" ></i>
+                    <i class="fa fa-wrench"></i>
                     <a routerLink="/admin-evaluacion">Administrar evaluaciones</a>
                 </div>
 
                 <h2>Académico</h2>
                 <div class="sidebar__link active_menu_link">
-                    <i class="fa fa-th-list"  aria-hidden="true"></i>
+                    <i class="fa fa-th-list" aria-hidden="true"></i>
                     <a routerLink="/instructor">Mis cursos</a>
                 </div>
                 <h2>Perfil</h2>
@@ -148,4 +152,3 @@
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="script.js"></script>
 </body>
-
