--- a/fesapade/src/app/components/addpublicacion/addpublicacion.component.html
+++ b/fesapade/src/app/components/addpublicacion/addpublicacion.component.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link rel="icon" href="../../../assets/fesapadelogo.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS GRID DASHBOARD</title>
@@ -99,7 +100,8 @@
                     </div>
                     <br>
                     <div class="alingboton">
-                        <button  (click)="publicar()" *ngIf="pub.id == 0"  [disabled]="!validatedForm.form.valid" type="submit" class="btn btn-primary btn-md">Publicar</button>
+                        <button (click)="publicar()" *ngIf="pub.id == 0" [disabled]="!validatedForm.form.valid"
+                            type="submit" class="btn btn-primary btn-md">Publicar</button>
                     </div>
                 </form>
 
@@ -133,7 +135,7 @@
                 </div>
                 <h2>Evaluaciones</h2>
                 <div class="sidebar__link ">
-                    <i class="fa fa-plus" ></i>
+                    <i class="fa fa-plus"></i>
                     <a routerLink="/add-evaluacion">Agregar evaluación</a>
                 </div>
                 <div class="sidebar__link">
