--- a/fesapade/src/app/components/administrarcursos/administrarcursos.component.html
+++ b/fesapade/src/app/components/administrarcursos/administrarcursos.component.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link rel="icon" href="../../../assets/fesapadelogo.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS GRID DASHBOARD</title>
@@ -46,24 +47,28 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr  *ngFor="let curs of cursos">
+                        <tr *ngFor="let curs of cursos">
                             <th scope="row">{{curs.nombre}}</th>
                             <td>{{curs.descripcion}}</td>
                             <td>{{curs.estado}}</td>
                             <td>
                                 <div class="btn-group">
-                                    <a type="button"  (click)="editar(curs.id_curso)" routerLink="/admin-editar-curso" class="btn btn-primary btn-lg"
-                                        title="Editar"  ><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                                    <a type="button" (click)="editar(curs.id_curso)" [routerLink]="['/asignar-curso-instructor']" class="btn btn-info btn-lg" title="Asignar instructor a curso"><i
-                                         class="fa fa-exchange" aria-hidden="true"></i></a>
-                                    <a type="button" class="btn btn-danger btn-lg" title="Eliminar" (click)="eliminar(curs.id_curso)" ><i
-                                            class="fa fa-trash-o"  aria-hidden="true"></i></a>
+                                    <a type="button" (click)="editar(curs.id_curso)" routerLink="/admin-editar-curso"
+                                        class="btn btn-primary btn-lg" title="Editar"><i class="fa fa-pencil-square-o"
+                                            aria-hidden="true"></i></a>
+                                    <a type="button" (click)="editar(curs.id_curso)"
+                                        [routerLink]="['/asignar-curso-instructor']" class="btn btn-info btn-lg"
+                                        title="Asignar instructor a curso"><i class="fa fa-exchange"
+                                            aria-hidden="true"></i></a>
+                                    <a type="button" class="btn btn-danger btn-lg" title="Eliminar"
+                                        (click)="eliminar(curs.id_curso)"><i class="fa fa-trash-o"
+                                            aria-hidden="true"></i></a>
 
-                       
+
                                 </div>
                             </td>
                         </tr>
-                       
+
                     </tbody>
                 </table>
                 <!-- MAIN TITLE ENDS HERE -->
@@ -119,7 +124,7 @@
                 <div class="sidebar__link">
                     <i class="fa fa-folder-open"></i>
                     <a routerLink="/admin-curso-baja">Cursos Finalizados</a>
-                  </div>
+                </div>
                 <div class="sidebar__link">
                     <i class="fa fa-graduation-cap"></i>
                     <a routerLink="/asign-curso-federado">Asignar federado a curso</a>
