--- a/fesapade/src/app/components/administrarevaluaciones/administrarevaluaciones.component.html
+++ b/fesapade/src/app/components/administrarevaluaciones/administrarevaluaciones.component.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link rel="icon" href="../../../assets/fesapadelogo.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS GRID DASHBOARD</title>
@@ -38,7 +39,7 @@
 
 
                 <!-- MAIN TITLE ENDS HERE -->
-<!-- Inicio de contenido -->
+                <!-- Inicio de contenido -->
                 <table class="table table-hover">
                     <thead>
                         <tr>
@@ -59,19 +60,23 @@
                             <td>{{evs.nom_curso}}</td>
                             <td>
                                 <div class="btn-group">
-                                    <button type="button" routerLink="/edit-evaluacion" class="btn btn-primary btn-lg" title="Editar" (click)="seleccionar(evs.id_evaluacion)"><i
+                                    <button type="button" routerLink="/edit-evaluacion" class="btn btn-primary btn-lg"
+                                        title="Editar" (click)="seleccionar(evs.id_evaluacion)"><i
                                             class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
-                                            <button type="button" routerLink="/list-notas-instructor" class="btn btn-dark btn-lg" title="Notas" (click)="seleccionar(evs.id_evaluacion)"><i
-                                                class="fa fa-bars" aria-hidden="true"></i></button>
-                                    <button type="button" class="btn btn-danger btn-lg" title="Eliminar" (click)="eliminar(evs.id_evaluacion)"><i
-                                            class="fa fa-trash-o" aria-hidden="true"></i></button>
+                                    <button type="button" routerLink="/list-notas-instructor"
+                                        class="btn btn-success btn-lg" title="Notas"
+                                        (click)="seleccionar(evs.id_evaluacion)"><i class="fa fa-eye"
+                                            aria-hidden="true"></i></button>
+                                    <button type="button" class="btn btn-danger btn-lg" title="Eliminar"
+                                        (click)="eliminar(evs.id_evaluacion)"><i class="fa fa-trash-o"
+                                            aria-hidden="true"></i></button>
 
                                 </div>
                             </td>
                         </tr>
                     </tbody>
                 </table>
-<!-- Fin de contenido -->
+                <!-- Fin de contenido -->
             </div>
         </main>
 
@@ -92,16 +97,16 @@
                 </div>
                 <h2>Anuncios y publicaciones</h2>
                 <div class="sidebar__link ">
-                    <i class="fa fa-plus" ></i>
+                    <i class="fa fa-plus"></i>
                     <a routerLink="/add-publicacion">Agregar publicación</a>
                 </div>
                 <div class="sidebar__link ">
-                    <i class="fa fa-wrench" ></i>
+                    <i class="fa fa-wrench"></i>
                     <a routerLink="/admin-publicacion">Administrar publicaciones</a>
                 </div>
                 <h2>Evaluaciones</h2>
                 <div class="sidebar__link ">
-                    <i class="fa fa-plus" ></i>
+                    <i class="fa fa-plus"></i>
                     <a routerLink="/add-evaluacion">Agregar evaluación</a>
                 </div>
                 <div class="sidebar__link active_menu_link">
