--- a/fesapade/src/app/components/cursos/cursos.component.html
+++ b/fesapade/src/app/components/cursos/cursos.component.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-
+<link rel="icon" href="../../../assets/fesapadelogo.ico">
 <header>
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -106,10 +106,18 @@
         <div class="container-fluid p-0">
             <div class="row text-left">
                 <div class="col-md-5 col-md-5">
-                    <h1 class="text-light">About Us</h1>
-                    <p class="text-muted">La Federación Salvadoreña de Paracaidismo y Aerodeportes (FESAPADE) es una
-                        Federación
-                        Deportivo Nacional que engloba todos los Deportes Aéreos en el país.</p>
+                    <h1 class="text-light">Contáctanos</h1>
+                    <p class="text-muted">Dirección​​​​​​:
+                        Aeropuerto Internacional de Ilopango, San Salvador. El Salvador. C.A.</p>
+                    <p class="text-muted">Correo electrónico:
+                        svfesapade@gmail.com</p>
+                    <p class="text-muted">Números de teléfono: <br>
+                        (503) 7736-6598
+                        <br>
+                        (503) 7304-8551
+                        <br>
+                        (503) 7840-0667
+                    </p>
                     <p class="pt-4 text-muted">Copyright ©2021 All rights reserved|Developed By <span>R.Coto and
                             A.Vladimir</span>
                     </p>
