--- a/fesapade/src/app/components/detallecurso/detallecurso.component.css
+++ b/fesapade/src/app/components/detallecurso/detallecurso.component.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 *{  
     box-sizing: hidden;
-    
+    font-family: 'Roboto', sans-serif;
 }
 
 /*menu*/
