--- a/fesapade/src/app/components/editarevaluacion/editarevaluacion.component.html
+++ b/fesapade/src/app/components/editarevaluacion/editarevaluacion.component.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link rel="icon" href="../../../assets/fesapadelogo.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS GRID DASHBOARD</title>
@@ -37,104 +38,111 @@
                 </div>
 
 
-               <!-- MAIN TITLE ENDS HERE -->
-               <form #addCursoForm="ngForm" enctype="multipart/form-data">
-                <div class="alingtitu">
-                    <div class="form-row">
-                        <div class="form-group col-md-5">
-                            <label for="formGroupExampleInput">Titulo de evaluación</label>
-                            <input type="text" required  class="form-control"
-                                id="formGroupExampleInput" autocomplete="off" [(ngModel)]="evalua.nombre" name="nombre" #nomC="ngModel" >
+                <!-- MAIN TITLE ENDS HERE -->
+                <form #addCursoForm="ngForm" enctype="multipart/form-data">
+                    <div class="alingtitu">
+                        <div class="form-row">
+                            <div class="form-group col-md-5">
+                                <label for="formGroupExampleInput">Titulo de evaluación</label>
+                                <input type="text" required class="form-control" id="formGroupExampleInput"
+                                    autocomplete="off" [(ngModel)]="evalua.nombre" name="nombre" #nomC="ngModel">
                                 <div *ngIf="(nomC.invalid && (nomC.dirty || nomC.touched))">
-                            
-                                    <p class="text-danger" *ngIf="nomC.errors.required">Campo requerido</p>                    
+
+                                    <p class="text-danger" *ngIf="nomC.errors.required">Campo requerido</p>
                                 </div>
                             </div>
 
-                    </div>
-                </div>
-                <div class="alingboton">
-                    <div class="form-group col-md-8">
-                        <label for="exampleFormControlTextarea1">Descripción</label>
-                        <textarea class="form-control" required id="exampleFormControlTextarea1" rows="4" [(ngModel)]="evalua.descripcion"  #desC="ngModel" name="descripcion"></textarea>
-                        <div *ngIf="(desC.invalid && (desC.dirty || desC.touched))">
-                            
-                            <p class="text-danger" *ngIf="desC.errors.required">Campo requerido</p>                    
                         </div>
                     </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-5">
-                        <label for="formGroupExampleInput">Porcentaje de nota global (Ej. 20.00=20%)</label>
-                        <input type="number" required  class="form-control" min="0.00" max="100.00" pattern="^[0-9]+(.[0-9]{1,2})?$" 
-                            id="formGroupExampleInput" autocomplete="off" [(ngModel)]="evalua.porcentaje" 
-                            name="porcentaje" #porC="ngModel" placeholder="20.00">
+                    <div class="alingboton">
+                        <div class="form-group col-md-8">
+                            <label for="exampleFormControlTextarea1">Descripción</label>
+                            <textarea class="form-control" required id="exampleFormControlTextarea1" rows="4"
+                                [(ngModel)]="evalua.descripcion" #desC="ngModel" name="descripcion"></textarea>
+                            <div *ngIf="(desC.invalid && (desC.dirty || desC.touched))">
+
+                                <p class="text-danger" *ngIf="desC.errors.required">Campo requerido</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-5">
+                            <label for="formGroupExampleInput">Porcentaje de nota global (Ej. 20.00=20%)</label>
+                            <input type="number" required class="form-control" min="0.00" max="100.00"
+                                pattern="^[0-9]+(.[0-9]{1,2})?$" id="formGroupExampleInput" autocomplete="off"
+                                [(ngModel)]="evalua.porcentaje" name="porcentaje" #porC="ngModel" placeholder="20.00">
                             <div *ngIf="(porC.invalid && (porC.dirty || porC.touched))">
-                                <p class="text-danger" *ngIf="porC.errors.required">Campo requerido</p>  
+                                <p class="text-danger" *ngIf="porC.errors.required">Campo requerido</p>
                                 <p class="text-danger" *ngIf="porC.errors.min">Valor minimo: 0.00</p>
                                 <p class="text-danger" *ngIf="porC.errors.max">Valor máximo: 100.00</p>
-                                <p class="text-danger" *ngIf="porC.errors.pattern">formato incorrecto (Ej. 10.00)</p>                  
+                                <p class="text-danger" *ngIf="porC.errors.pattern">formato incorrecto (Ej. 10.00)</p>
                             </div>
                         </div>
 
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-15">
-                        <label for="inputState">Fecha de inicio </label>
-                        <input type="date" required  class="form-control"
-                        id="formGroupExampleInput" autocomplete="off" [(ngModel)]="evalua.fecha_inicio" name="fecha_inicio" #fechiC="ngModel" >
-                        <div *ngIf="(fechiC.invalid && (fechiC.dirty || fechiC.touched))">
-                            
-                            <p class="text-danger"  *ngIf="fechiC.errors.required">Campo requerido</p>                    
-                        </div>
                     </div>
-                    <div class="form-group col-md-15">
-                        <label for="inputState">Fecha de finalización</label>
-                        <input type="date" required  class="form-control"
-                        id="formGroupExampleInput" autocomplete="off" [(ngModel)]="evalua.fecha_fin" name="fecha_fin" #fechfC="ngModel" >
-                        <div *ngIf="(fechfC.invalid && (fechfC.dirty || fechfC.touched))">
-                            
-                            <p class="text-danger"  *ngIf="fechfC.errors.required">Campo requerido</p>                    
-                        </div>
-                    </div>
-
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-15">
-                        <label for="inputState">Curso</label>
-                        <select id="inputState" class="form-control" required [(ngModel)]="evalua.id_curso" name="curso" #cursC="ngModel" >
-                            <option *ngFor="let curs of cursos"  [value]="curs.id_curso">{{curs.nombre}}</option>
-                        </select>
-                        <div *ngIf="(cursC.invalid && (cursC.dirty || cursC.touched))">
-                            
-                            <p class="text-danger"  *ngIf="cursC.errors.required">Campo requerido</p>                    
-                        </div>
-                    </div>
-
-                </div>
-                <div class="alingtitu">
                     <div class="form-row">
-                        <div class="form-group col-md-5">
-                            <div class="alingboton">
-                                <label for="exampleFormControlFile1">Añadir un archivo</label>
-                                <input type="file" accept=".xlsx,.xls,.doc,.docx,.ppt,.pptx,.pdf,.zip,.rar" class="form-control-file" id="exampleFormControlFile1" 
-                                #porC="ngModel" [(ngModel)]="evalua.multimedia" name="multimedia" (change)="seleccionarArchivo($event)" >
-                                <div *ngIf="(porC.invalid && (porC.dirty || porC.touched))">
-                             
-                                    <p class="text-danger"  *ngIf="porC.errors.accept">Tipo de archivo incorrecto</p>                    
+                        <div class="form-group col-md-15">
+                            <label for="inputState">Fecha de inicio </label>
+                            <input type="date" required class="form-control" id="formGroupExampleInput"
+                                autocomplete="off" [(ngModel)]="evalua.fecha_inicio" name="fecha_inicio"
+                                #fechiC="ngModel">
+                            <div *ngIf="(fechiC.invalid && (fechiC.dirty || fechiC.touched))">
+
+                                <p class="text-danger" *ngIf="fechiC.errors.required">Campo requerido</p>
+                            </div>
+                        </div>
+                        <div class="form-group col-md-15">
+                            <label for="inputState">Fecha de finalización</label>
+                            <input type="date" required class="form-control" id="formGroupExampleInput"
+                                autocomplete="off" [(ngModel)]="evalua.fecha_fin" name="fecha_fin" #fechfC="ngModel">
+                            <div *ngIf="(fechfC.invalid && (fechfC.dirty || fechfC.touched))">
+
+                                <p class="text-danger" *ngIf="fechfC.errors.required">Campo requerido</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-15">
+                            <label for="inputState">Curso</label>
+                            <select id="inputState" class="form-control" required [(ngModel)]="evalua.id_curso"
+                                name="curso" #cursC="ngModel">
+                                <option *ngFor="let curs of cursos" [value]="curs.id_curso">{{curs.nombre}}</option>
+                            </select>
+                            <div *ngIf="(cursC.invalid && (cursC.dirty || cursC.touched))">
+
+                                <p class="text-danger" *ngIf="cursC.errors.required">Campo requerido</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="alingtitu">
+                        <div class="form-row">
+                            <div class="form-group col-md-5">
+                                <div class="alingboton">
+                                    <label for="exampleFormControlFile1">Añadir un archivo</label>
+                                    <input type="file" accept=".xlsx,.xls,.doc,.docx,.ppt,.pptx,.pdf,.zip,.rar"
+                                        class="form-control-file" id="exampleFormControlFile1" #porC="ngModel"
+                                        [(ngModel)]="evalua.multimedia" name="multimedia"
+                                        (change)="seleccionarArchivo($event)">
+                                    <div *ngIf="(porC.invalid && (porC.dirty || porC.touched))">
+
+                                        <p class="text-danger" *ngIf="porC.errors.accept">Tipo de archivo incorrecto</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                       
 
+
+                        </div>
                     </div>
-                </div>
-            
-                <br>
-                <div class="alingboton">
-                    <button  (click)="modificacion()" *ngIf="evalua.id_evaluacion != 0" [disabled]="!addCursoForm.form.valid" type="submit" class="btn btn-primary btn-md">Crear</button>
-                </div>
-            </form>
+
+                    <br>
+                    <div class="alingboton">
+                        <button (click)="modificacion()" *ngIf="evalua.id_evaluacion != 0"
+                            [disabled]="!addCursoForm.form.valid" type="submit"
+                            class="btn btn-primary btn-md">Crear</button>
+                    </div>
+                </form>
                 <!-- final de contenido -->
             </div>
         </main>
@@ -156,7 +164,7 @@
                 </div>
                 <h2>Anuncios y publicaciones</h2>
                 <div class="sidebar__link ">
-                    <i class="fa fa-plus" ></i>
+                    <i class="fa fa-plus"></i>
                     <a routerLink="/add-publicacion">Agregar publicación</a>
                 </div>
                 <div class="sidebar__link">
@@ -165,7 +173,7 @@
                 </div>
                 <h2>Evaluaciones</h2>
                 <div class="sidebar__link ">
-                    <i class="fa fa-plus" ></i>
+                    <i class="fa fa-plus"></i>
                     <a routerLink="/add-evaluacion">Agregar evaluación</a>
                 </div>
                 <div class="sidebar__link active_menu_link">
