--- a/fesapade/src/app/components/editarnota/editarnota.component.html
+++ b/fesapade/src/app/components/editarnota/editarnota.component.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link rel="icon" href="../../../assets/fesapadelogo.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS GRID DASHBOARD</title>
@@ -38,67 +39,72 @@
 
 
                 <!-- MAIN TITLE ENDS HERE -->
-<!-- Inicio de contenido -->
-<form #validatedForm="ngForm">
-    <div class="alingtitu">
-        
-            <div class="form-row">
-                <div class="form-group col-md-5">
-                    <label for="formGroupExampleInput">Federado seleccionado</label>
-                    <input type="text" required class="form-control" #fedC="ngModel"  [(ngModel)]="nota.nombre + ' ' + nota.apellido"  name="federado"
-                        id="formGroupExampleInput"  readonly>
-                        <div *ngIf="(fedC.invalid && (fedC.dirty || fedC.touched))">
-                    
-                            <p class="text-danger" *ngIf="fedC.errors.required">Campo requerido</p>                    
+                <!-- Inicio de contenido -->
+                <form #validatedForm="ngForm">
+                    <div class="alingtitu">
+
+                        <div class="form-row">
+                            <div class="form-group col-md-5">
+                                <label for="formGroupExampleInput">Federado seleccionado</label>
+                                <input type="text" required class="form-control" #fedC="ngModel"
+                                    [(ngModel)]="nota.nombre + ' ' + nota.apellido" name="federado"
+                                    id="formGroupExampleInput" readonly>
+                                <div *ngIf="(fedC.invalid && (fedC.dirty || fedC.touched))">
+
+                                    <p class="text-danger" *ngIf="fedC.errors.required">Campo requerido</p>
+                                </div>
+                            </div>
+
                         </div>
-                </div>
-    
-            </div>
-            <br>
-       <div class="form-group col-md-5">
-              <label for="inputState">Evaluación</label>
+                        <br>
+                        <div class="form-group col-md-5">
+                            <label for="inputState">Evaluación</label>
 
-              <font size=1>(Evaluaciones calificadas para este federado)</font>
-              <select id="inputState" class="form-control"  autocomplete="off"  (change)="selectChangeHandler($event)"
-              [(ngModel)]="nota.id_evaluacion"   required #evaC="ngModel" name="evaluacion">
-                <option *ngFor="let eva of evaluaciones"  [value]="eva.id_evaluacion">{{eva.nombre_evaluacion}}</option> 
-              </select>
-              <div *ngIf="(evaC.invalid && (evaC.dirty || evaC.touched))">
-                    
-                <p class="text-danger" *ngIf="evaC.errors.required">Campo requerido</p>                    
-            </div>
-          </div>
-          <br>
-          <div class="form-group col-md-5">
-            <label for="formGroupExampleInput">Calificación actual</label>
-            <input type="number" readonly class="form-control" min="0.00" max="10.00"
-                id="formGroupExampleInput" [(ngModel)]="selectedEv" [(ngModel)]="nota.nota" 
-                name="nota2" >
-                
-            </div>
-            <div class="form-group col-md-5">
-                <label for="formGroupExampleInput">Nueva calificación</label>
-                <input type="number" required class="form-control" min="0.00" max="10.00" pattern="^[0-9]+(.[0-9]{1,2})?$" 
-                    id="formGroupExampleInput" autocomplete="off" [(ngModel)]="nota_nueva" 
-                    name="nota" #notC="ngModel" placeholder="10.00">
-                    <div *ngIf="(notC.invalid && (notC.dirty || notC.touched))">
-                        <p class="text-danger" *ngIf="notC.errors.required">Campo requerido</p>  
-                        <p class="text-danger" *ngIf="notC.errors.min">Valor minimo: 0.00</p>
-                        <p class="text-danger" *ngIf="notC.errors.max">Valor máximo: 10.00</p>
-                        <p class="text-danger" *ngIf="notC.errors.pattern">formato incorrecto (Ej. 10.00)</p>                  
+                            <font size=1>(Evaluaciones calificadas para este federado)</font>
+                            <select id="inputState" class="form-control" autocomplete="off"
+                                (change)="selectChangeHandler($event)" [(ngModel)]="nota.id_evaluacion" required
+                                #evaC="ngModel" name="evaluacion">
+                                <option *ngFor="let eva of evaluaciones" [value]="eva.id_evaluacion">
+                                    {{eva.nombre_evaluacion}}</option>
+                            </select>
+                            <div *ngIf="(evaC.invalid && (evaC.dirty || evaC.touched))">
+
+                                <p class="text-danger" *ngIf="evaC.errors.required">Campo requerido</p>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="form-group col-md-5">
+                            <label for="formGroupExampleInput">Calificación actual</label>
+                            <input type="number" readonly class="form-control" min="0.00" max="10.00"
+                                id="formGroupExampleInput" [(ngModel)]="selectedEv" [(ngModel)]="nota.nota"
+                                name="nota2">
+
+                        </div>
+                        <div class="form-group col-md-5">
+                            <label for="formGroupExampleInput">Nueva calificación</label>
+                            <input type="number" required class="form-control" min="0.00" max="10.00"
+                                pattern="^[0-9]+(.[0-9]{1,2})?$" id="formGroupExampleInput" autocomplete="off"
+                                [(ngModel)]="nota_nueva" name="nota" #notC="ngModel" placeholder="10.00">
+                            <div *ngIf="(notC.invalid && (notC.dirty || notC.touched))">
+                                <p class="text-danger" *ngIf="notC.errors.required">Campo requerido</p>
+                                <p class="text-danger" *ngIf="notC.errors.min">Valor minimo: 0.00</p>
+                                <p class="text-danger" *ngIf="notC.errors.max">Valor máximo: 10.00</p>
+                                <p class="text-danger" *ngIf="notC.errors.pattern">formato incorrecto (Ej. 10.00)</p>
+                            </div>
+                        </div>
+
+
                     </div>
-                </div>
-                
 
-  </div>
+                    <br>
+                    <div class="alingboton">
+                        <button type="submit" *ngIf="nota.nombre != null" (click)="modificacion()"
+                            [disabled]="!validatedForm.form.valid" class="btn btn-primary btn-md">Actualizar
+                            nota</button>
+                    </div>
 
-    <br>
-    <div class="alingboton">
-        <button type="submit" *ngIf="nota.nombre != null"  (click)="modificacion()"  [disabled]="!validatedForm.form.valid" class="btn btn-primary btn-md">Actualizar nota</button>
-    </div>
-   
-</form>
-<!-- Fin de contenido -->
+                </form>
+                <!-- Fin de contenido -->
             </div>
         </main>
 
@@ -119,7 +125,7 @@
                 </div>
                 <h2>Anuncios y publicaciones</h2>
                 <div class="sidebar__link ">
-                    <i class="fa fa-plus" ></i>
+                    <i class="fa fa-plus"></i>
                     <a routerLink="/add-publicacion">Agregar publicación</a>
                 </div>
                 <div class="sidebar__link">
@@ -132,13 +138,13 @@
                     <a routerLink="/add-evaluacion">Agregar evaluación</a>
                 </div>
                 <div class="sidebar__link">
-                    <i class="fa fa-wrench" ></i>
+                    <i class="fa fa-wrench"></i>
                     <a routerLink="/admin-evaluacion">Administrar evaluaciones</a>
                 </div>
 
                 <h2>Académico</h2>
                 <div class="sidebar__link active_menu_link">
-                    <i class="fa fa-th-list"  aria-hidden="true"></i>
+                    <i class="fa fa-th-list" aria-hidden="true"></i>
                     <a routerLink="/instructor">Mis cursos</a>
                 </div>
                 <h2>Perfil</h2>
@@ -156,4 +162,3 @@
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="script.js"></script>
 </body>
-
