--- a/fesapade/src/app/components/instructor/instructor.component.html
+++ b/fesapade/src/app/components/instructor/instructor.component.html
@@ -1,6 +1,7 @@
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+  <link rel="icon" href="../../../assets/fesapadelogo.ico">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CSS GRID DASHBOARD</title>
@@ -47,16 +48,18 @@
 
 
             <div class="team row">
-              <div *ngFor="let curso of ins" class="card text-center mr-2 shadow bg-white rounded" >
-                <img class="card-img-top" src="http://localhost/recursos/imagenes/portadas_cursos/{{curso.portada}}" alt="Card image cap">
+              <div *ngFor="let curso of ins" class="card text-center mr-2 shadow bg-white rounded">
+                <img class="card-img-top" src="http://localhost/recursos/imagenes/portadas_cursos/{{curso.portada}}"
+                  alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">{{curso.nombrecurso}}</h5>
                   <br><br><br>
                 </div>
-                
+
                 <div class="card-footer">
                   <div class="btn-content">
-                    <button class="btn2" role="link" role="link"  (click)="seleccionar(curso.id_curso)" routerLink="/list-federados">Ir al curso</button>
+                    <button class="btn2" role="link" role="link" (click)="seleccionar(curso.id_curso)"
+                      routerLink="/list-federados">Ir al curso</button>
 
                   </div>
                 </div>
@@ -75,55 +78,55 @@
 
     <div id="sidebar" [ngClass]="{sidebar_responsive: contentHighlighted}">
       <div class="sidebar__title">
-          <div class="sidebar__img">
-              <img src="../../../assets/fesapadelogo.png" alt="logo" />
-              <h1>Fesapade</h1>
-          </div>
-          <i *ngIf="contentHighlighted" (click)="contentHighlighted = false" class="fa fa-times" id="sidebarIcon"
-              aria-hidden="true"></i>
+        <div class="sidebar__img">
+          <img src="../../../assets/fesapadelogo.png" alt="logo" />
+          <h1>Fesapade</h1>
+        </div>
+        <i *ngIf="contentHighlighted" (click)="contentHighlighted = false" class="fa fa-times" id="sidebarIcon"
+          aria-hidden="true"></i>
       </div>
 
       <div class="sidebar__menu">
-          <div class="sidebar__link">
-              <i class="fa fa-home"></i>
-              <a href="#">Home</a>
-          </div>
-          <h2>Anuncios y publicaciones</h2>
-          <div class="sidebar__link">
-              <i class="fa fa-plus"></i>
-              <a routerLink="/add-publicacion">Agregar publicación</a>
-          </div>
-          <div class="sidebar__link">
-              <i class="fa fa-wrench"></i>
-              <a routerLink="/admin-publicacion">Administrar publicaciones</a>
-          </div>
-          <h2>Evaluaciones</h2>
-          <div class="sidebar__link ">
-              <i class="fa fa-plus" ></i>
-              <a routerLink="/add-evaluacion">Agregar evaluación</a>
-          </div>
-          <div class="sidebar__link">
-              <i class="fa fa-wrench"></i>
-              <a routerLink="/admin-evaluacion">Administrar evaluaciones</a>
-          </div>
+        <div class="sidebar__link">
+          <i class="fa fa-home"></i>
+          <a href="#">Home</a>
+        </div>
+        <h2>Anuncios y publicaciones</h2>
+        <div class="sidebar__link">
+          <i class="fa fa-plus"></i>
+          <a routerLink="/add-publicacion">Agregar publicación</a>
+        </div>
+        <div class="sidebar__link">
+          <i class="fa fa-wrench"></i>
+          <a routerLink="/admin-publicacion">Administrar publicaciones</a>
+        </div>
+        <h2>Evaluaciones</h2>
+        <div class="sidebar__link ">
+          <i class="fa fa-plus"></i>
+          <a routerLink="/add-evaluacion">Agregar evaluación</a>
+        </div>
+        <div class="sidebar__link">
+          <i class="fa fa-wrench"></i>
+          <a routerLink="/admin-evaluacion">Administrar evaluaciones</a>
+        </div>
 
-          <h2>Académico</h2>
-          <div class="sidebar__link  active_menu_link">
-            <i class="fa fa-th-list" aria-hidden="true"></i>
-            <a routerLink="/instructor">Mis cursos</a>
-          </div>
-             <h2>Perfil</h2>
-          <div class="sidebar__link ">
-             <i class="fa fa-pencil-square-o"  ></i>
-             <a routerLink="/edit-perfil">Editar mi perfil</a>
-           </div>
-          <div class="sidebar__logout" *ngIf="logoutbtn">
-              <i class="fa fa-sign-out"></i>
-              <a routerLink="/login" (click)="logout()">Cerrar sesión</a>
-          </div>
+        <h2>Académico</h2>
+        <div class="sidebar__link  active_menu_link">
+          <i class="fa fa-th-list" aria-hidden="true"></i>
+          <a routerLink="/instructor">Mis cursos</a>
+        </div>
+        <h2>Perfil</h2>
+        <div class="sidebar__link ">
+          <i class="fa fa-pencil-square-o"></i>
+          <a routerLink="/edit-perfil">Editar mi perfil</a>
+        </div>
+        <div class="sidebar__logout" *ngIf="logoutbtn">
+          <i class="fa fa-sign-out"></i>
+          <a routerLink="/login" (click)="logout()">Cerrar sesión</a>
+        </div>
       </div>
+    </div>
   </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-<script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+  <script src="script.js"></script>
 </body>
