--- a/fesapade/src/app/components/listafederado/listafederado.component.html
+++ b/fesapade/src/app/components/listafederado/listafederado.component.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link rel="icon" href="../../../assets/fesapadelogo.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS GRID DASHBOARD</title>
@@ -38,11 +39,11 @@
 
 
                 <!-- MAIN TITLE ENDS HERE -->
-<!-- Inicio de contenido -->
+                <!-- Inicio de contenido -->
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                            
+
                             <th scope="col">Nombres</th>
                             <th scope="col">Apellidos</th>
                             <th scope="col">Email</th>
@@ -54,21 +55,23 @@
                             <th scope="row">{{feds.nombre}}</th>
                             <td>{{feds.apellido}}</td>
                             <td>{{feds.email}}</td>
-                            
+
                             <td>
                                 <div class="btn-group">
-                                    <button type="button" routerLink="/add-nota" class="btn btn-success btn-lg" title="Asignar Nota" (click)="seleccionar(feds.id_matricula)"><i
+                                    <button type="button" routerLink="/add-nota" class="btn btn-success btn-lg"
+                                        title="Asignar Nota" (click)="seleccionar(feds.id_matricula)"><i
                                             class=" fa fa-plus" aria-hidden="true"></i></button>
-                                    <button type="button" routerLink="/edit-nota" class="btn btn-primary btn-lg" title="Editar Nota" (click)="seleccionar(feds.id_matricula)"><i
-                                                class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
+                                    <button type="button" routerLink="/edit-nota" class="btn btn-primary btn-lg"
+                                        title="Editar Nota" (click)="seleccionar(feds.id_matricula)"><i
+                                            class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
 
                                 </div>
                             </td>
                         </tr>
-                
+
                     </tbody>
                 </table>
-<!-- Fin de contenido -->
+                <!-- Fin de contenido -->
             </div>
         </main>
 
@@ -89,7 +92,7 @@
                 </div>
                 <h2>Anuncios y publicaciones</h2>
                 <div class="sidebar__link ">
-                    <i class="fa fa-plus" ></i>
+                    <i class="fa fa-plus"></i>
                     <a routerLink="/add-publicacion">Agregar publicación</a>
                 </div>
                 <div class="sidebar__link">
@@ -102,13 +105,13 @@
                     <a routerLink="/add-evaluacion">Agregar evaluación</a>
                 </div>
                 <div class="sidebar__link">
-                    <i class="fa fa-wrench" ></i>
+                    <i class="fa fa-wrench"></i>
                     <a routerLink="/admin-evaluacion">Administrar evaluaciones</a>
                 </div>
 
                 <h2>Académico</h2>
                 <div class="sidebar__link active_menu_link">
-                    <i class="fa fa-th-list"  aria-hidden="true"></i>
+                    <i class="fa fa-th-list" aria-hidden="true"></i>
                     <a routerLink="/instructor">Mis cursos</a>
                 </div>
                 <h2>Perfil</h2>
