--- a/fesapade/src/app/components/listnotasinstructor/listnotasinstructor.component.html
+++ b/fesapade/src/app/components/listnotasinstructor/listnotasinstructor.component.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link rel="icon" href="../../../assets/fesapadelogo.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS GRID DASHBOARD</title>
@@ -38,7 +39,7 @@
 
 
                 <!-- MAIN TITLE ENDS HERE -->
-<!-- Inicio de contenido -->
+                <!-- Inicio de contenido -->
                 <table class="table table-hover">
                     <thead>
                         <tr>
@@ -47,7 +48,7 @@
                             <th scope="col">Nota</th>
                             <th scope="col">Porcentaje</th>
                             <th scope="col">Promedio</th>
-                        
+
                         </tr>
                     </thead>
                     <tbody>
@@ -60,7 +61,7 @@
                         </tr>
                     </tbody>
                 </table>
-<!-- Fin de contenido -->
+                <!-- Fin de contenido -->
             </div>
         </main>
 
@@ -81,16 +82,16 @@
                 </div>
                 <h2>Anuncios y publicaciones</h2>
                 <div class="sidebar__link ">
-                    <i class="fa fa-plus" ></i>
+                    <i class="fa fa-plus"></i>
                     <a routerLink="/add-publicacion">Agregar publicación</a>
                 </div>
                 <div class="sidebar__link ">
-                    <i class="fa fa-wrench" ></i>
+                    <i class="fa fa-wrench"></i>
                     <a routerLink="/admin-publicacion">Administrar publicaciones</a>
                 </div>
                 <h2>Evaluaciones</h2>
                 <div class="sidebar__link ">
-                    <i class="fa fa-plus" ></i>
+                    <i class="fa fa-plus"></i>
                     <a routerLink="/add-evaluacion">Agregar evaluación</a>
                 </div>
                 <div class="sidebar__link active_menu_link">
