--- a/fesapade/src/app/components/listpublicaciones/listpublicaciones.component.html
+++ b/fesapade/src/app/components/listpublicaciones/listpublicaciones.component.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link rel="icon" href="../../../assets/fesapadelogo.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS GRID DASHBOARD</title>
@@ -52,7 +53,7 @@
                             class="pdf" src="../../../assets/iconos_extensiones/{{pubs.extension}}.svg" alt=""
                             width="60px">{{pubs.archivo}}</a>
                     <br><br>
-                    <hr   size="2px" color="gray" />
+                    <hr size="2px" color="gray" />
                     <br>
                 </div>
                 <br>
@@ -77,7 +78,7 @@
                             class="pdf" src="../../../assets/iconos_extensiones/{{eva.extension}}.svg" alt=""
                             width="60px">{{eva.multimedia}}</a>
                     <br><br>
-                    <hr  size="2px" color="gray" />
+                    <hr size="2px" color="gray" />
                     <br>
                 </div>
                 <!--Fin de contenido-->
@@ -108,6 +109,10 @@
                 <div class="sidebar__link">
                     <i class="fa fa-check-square-o" aria-hidden="true"></i>
                     <a routerLink="/notas-federado">Notas</a>
+                </div>
+                <div class="sidebar__link">
+                    <i class="fa fa-archive" aria-hidden="true"></i>
+                    <a routerLink="/fedcursos-finalizados">Expediente de notas</a>
                 </div>
 
                 <h2>Perfil</h2>
