--- a/fesapade/src/app/components/notasfederado/notasfederado.component.html
+++ b/fesapade/src/app/components/notasfederado/notasfederado.component.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link rel="icon" href="../../../assets/fesapadelogo.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS GRID DASHBOARD</title>
@@ -31,7 +32,7 @@
                     <div class="main__title" *ngFor="let nombre of nomb">
 
                         <div class="main__greeting">
-                            <h1>Notas del curso {{nombre.nombrecurso}} </h1>
+                            <h1>Notas del curso: {{nombre.nombrecurso}} </h1>
                             <br>
                         </div>
                     </div>
@@ -56,12 +57,12 @@
                                 <td>{{notas.promedio}}</td>
                             </tr>
                             <tr>
-                              
+
                                 <td></td>
                                 <td></td>
-                                <td class= "prom" scope="row">Nota Global</td>
-                                <td class= "prom">{{suma}}</td>
-                               
+                                <td class="prom" scope="row">Nota Global</td>
+                                <td class="prom">{{suma}}</td>
+
                             </tr>
                         </tbody>
                     </table>
@@ -94,6 +95,10 @@
                 <div class="sidebar__link active_menu_link">
                     <i class="fa fa-check-square-o" aria-hidden="true"></i>
                     <a routerLink="/notas-federado">Notas</a>
+                </div>
+                <div class="sidebar__link">
+                    <i class="fa fa-archive" aria-hidden="true"></i>
+                    <a routerLink="/fedcursos-finalizados">Expediente de notas</a>
                 </div>
 
                 <h2>Perfil</h2>
